--- a/TODO
+++ b/TODO
@@ -71,7 +71,16 @@
   and different people may deal with this differently (UTF-8 vs. HTML
   entities). Perhaps safest to assume that they're HTML and clean up
   (if possible, only do entity translation, and throw out any markup).
-- Is htdocs/skins/fancy/abort.php even used? If not, delete it.
+- lib/config.inc: PLUGIN_DIR should be full pathname to the directory
+  specified by INSTALL_PLUGINS in Makefile.{common,local}.
+- .htaccess: Generate from a template. Actually, some of it is
+  relevant to the ui part, some to the back-end, and some to both.
+  'svn copy' it, and adapt as necessary
+- SED_REPLACEMENTS is bulky and awkward. It'd probably be best to
+  generate a 'replace.sed' script (or something) in the top directory.
+  It can then be used by every other Makefile.
+- Are htdocs/skins/fancy/abort.php, abort.css even used? If not,
+  delete them.
 - Is htdocs/skins/fancy/feed-title.php even used? If not, delete it.
 - Is htdocs/skins/fancy/item.php even used? If not, delete it.
 - localStorage: performance sucks under Firefox. See
@@ -109,8 +118,6 @@
 	Perhaps MySQL found_rows() function can be used here: figure
   out whether there are more results, and add a "{more: true}" element
   at the end of the JS results.
-- It'd probably be useful to have a db_* function to get a particular
-  item.
 - List of Mobile Safari events:
   http://developer.apple.com/library/safari/#documentation/AppleApplications/Reference/SafariWebContent/HandlingEvents/HandlingEvents.html#//apple_ref/doc/uid/TP40006511-SW5
   (Select "Supported Events" if that doesn't work)
@@ -1167,6 +1174,7 @@
 	http://www.w3schools.com/jsref/obj_navigator.asp
   for detecting the browser. However, this should be avoided. Better
   to check whether the browser has a particular feature.
+	Can also use navigator.userAgent to guess which browser this is.
 # Local Variables:
 # fill-prefix: "  "
 # mode: auto-fill
