--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+- Bug: VARCHAR(255) is too short for WaPo Local urls (and some
+  others). Need to extend. Stay with VARCHAR, or is it time to migrate
+  to one of the TEXT fields?
+	The longest URL I see today (Mon Oct  1 13:24:57 2012) is 328
+  chars.
 - Bug: When subscribing to a feed, the initial display doesn't work:
   subscribe to a new feed, which gets ID 999. This redirects you to
   .../view.php?id=999.
@@ -80,8 +85,18 @@
 	console.profile("my profile name");
 	<code to profile>
 	console.profileEnd("my profile name");
+- Possible feature: "save for later": Grab a random web page and turn
+  it into a post in an artificial feed.
+	Could do this with a bookmarklet that grabs the current
+  location and submits that to a script.
+	Need to analyze the content of the page somehow. Perhaps can
+  check to see whether it contains "<article>...</article>" and if so,
+  use that. Otherwise... not sure.
 - Le Monde titles: apparently their RSS feed uses UTF-8 for nearly
-  everything, but Windows-1252 for _some_ titles. Can't fix. Won't fix.
+  everything, but Windows-1252 for _some_ titles. Can't fix. Won't
+  fix.
+	Or maybe they use Windows-1252 for everything, and just claim
+  that it's UTF-8.
 - Apparently unused functions:
 	lib/database.inc:
 		db_get_item_updates
@@ -94,6 +109,64 @@
 - Mutation events (like "DOMNodeInserted" in js/PatEvent.js) are
   apparently now deprecated in favor of the DOM MutationObserver:
   https://hacks.mozilla.org/2012/05/dom-mutationobserver-reacting-to-dom-changes-without-killing-browser-performance/
+- Events to look up:
+  https://developer.mozilla.org/en-US/docs/tag/events
+
+  devicelight: ambient light sensor:
+	https://developer.mozilla.org/en-US/docs/DOM/DeviceLightEvent
+	Could use this to switch to dark theme at night.
+	But apparently not supported by Android or Mobile Safari.
+  devicemotion: accelerometer
+  deviceorientation: device has rotated (landscape <-> portrait)
+  deviceproximity: proximity of physical object (?)
+  drag: when element or text selection being dragged
+  dragend: when drag operation has ended
+  dragenter: 
+  dragleave: 
+  dragover: 
+  dragstart: 
+  drop: 
+  durationchange: 
+  emptied: 
+  ended: 
+  focus: 
+  hashchange: when hash part of URL in URL bar changes.
+  input: 
+  invalid: 
+  loadeddata: 
+  loadedmetadata: 
+  loadstart: 
+  message: 
+  mozfullscreenchange: 
+  mozfullscreenerror: 
+  mozpointerlockchange: 
+  mozpointerlockerror: 
+  offline: 
+  online: 
+  pagehide: 
+  pageshow: 
+  paste: 
+  pause: 
+  play: 
+  playing: 
+  popstate: 
+  progress: 
+  ratechange: 
+  reset: 
+  resize: 
+  scroll: 
+  seeked: 
+  seeking: 
+  select: 
+  show: 
+  stalled: 
+  submit: 
+  suspend: 
+  timeupdate: 
+  unload: 
+  userproximity: 
+  volumechange: 
+  waiting: 
 - document.querySelector() and .querySelectorAll() look massively
   useful:
   http://www.javascriptkit.com/dhtmltutors/css_selectors_api.shtml
