--- a/TODO
+++ b/TODO
@@ -62,6 +62,8 @@
 - Bug: keybindings.js doesn't handle non-letter bindings well: "?"
   gets turned into Spanish upside-down question mark by toUpperCase().
 	Need a notation to bind Esc.
+- Use OAuth for authentication?
+  http://oauth.net/2/
 - Look for better fonts?
   http://www.fontsquirrel.com/
 - CSS text-overflow property:
