--- a/TODO
+++ b/TODO
@@ -62,6 +62,7 @@
 - Bug: keybindings.js doesn't handle non-letter bindings well: "?"
   gets turned into Spanish upside-down question mark by toUpperCase().
 	Need a notation to bind Esc.
+- Get rid of the skin stuff. It's a goddamn mess.
 - Look for better fonts?
   http://www.fontsquirrel.com/
 - CSS text-overflow property:
