--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ Make sure you have the following sofware packages installed:
 - PHP modules:
 	- Curl
 	- MySQLi (not MySQL)
-	- XML Parser
+	- XML Parser (php5-xml package for FreeBSD).
 - MySQL 5.x
 - (optional) HTMLPurifier, from http://www.htmlpurifier.org/
 
