--- a/TODO
+++ b/TODO
@@ -12,6 +12,10 @@
   they're doing.
 	Or perhaps the admin updated the feed URL and forgot to update
   the <atom:link>. So I'm not sure what to do about this.
+- Bug: if there aren't any feeds (e.g., can't connect to MySQL
+  server), the feed list shows one entry, "? [no title]".
+	Presumably it ought to display an error message and an empty
+  list of feeds.
 - Bug: When subscribing to a feed, the initial display doesn't work:
   subscribe to a new feed, which gets ID 999. This redirects you to
   .../view.php?id=999.
