--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 - Bug: update.php will apparently happily take id=999 without
   complaining, even if no feed with that ID exists. It throws a curl
   error because NULL isn't a valid URL. Ought to catch this before.
+- Bug: if there aren't any feeds (e.g., can't connect to MySQL
+  server), the feed list shows one entry, "? [no title]".
+	Presumably it ought to display an error message and an empty
+  list of feeds.
 - Bug: When subscribing to a feed, the initial display doesn't work:
   subscribe to a new feed, which gets ID 999. This redirects you to
   .../view.php?id=999.
